# kyvi

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_test.yml
src/: cli.rs  comm.rs  command.rs  datatype.rs  kv.rs  lib.rs  main.rs  parser.rs
src/comm/: datatype.rs  kv.rs  parser.rs  request.rs
src/comm/kv/: tests.rs
src/kv/: tests.rs
