[package]
authors = ["Chun-Kwong Wong <chunkwong.wong@gmail.com>"]
edition = "2021"
name = "kyvi"
version = "0.1.0"

[dependencies]
derivative = "2.2.0"
getopts = "0.2"
lazy_static = "1.5.0"
phf = {version = "0.11", features = ["macros"]}
rand = "0.9.0"
regex = "1.11.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_derive = "1.0.210"
signal-hook = "0.3.17"
threadpool = "1.8.1"

[dev-dependencies]
serial_test = "*"
